--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <img src="images/databases.svg" alt="">
                                 <h4>Database Management</h4>
                                 <p>
-                                    Knowledagable in SQL and RDBMS with experince in working with MySql DBMS.
+                                    Knowledagable in SQL and RDBMS with experience in working with MySql DBMS.
                                 </p>
                             </div>
 
