--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                     <div class="content-670">
                         <p>
-                            I am a twenty-year-old engineering student studying in K.J. Somaiya College of Engineering. I am currently pursuing Electronics and Telecommunication Engineering. I am currently in my final year and I expect to graduate by 2021.
+                            I am a twenty-year-old engineering student studying in K.J. Somaiya College of Engineering. I am currently pursuing Electronics and Telecommunication Engineering and attending my senior year. I am expecting to graduate by 2021.
                         </p>
                     </div>
 
