--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                   <u>Language used</u>:<br><u>Front-end</u>: Python (Kivy)<br><u>Back-end</u>: Python
                               </p>
                               <a href="https://github.com/fahadhub/project-COVID/"><i class="fab fa-github fa-lg"></i></a>
-				  <i class="fab fa-file-image-o fa-lg"></i>
+				  <i class="fas fa-images"></i>
 
 
                           </div>
