--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
                                   <u>Language used</u>:<br><u>Front-end</u>: Python (Kivy)<br><u>Back-end</u>: Python
                               </p>
                               <a href="https://github.com/fahadhub/project-COVID/"><i class="fab fa-github fa-lg"></i></a>
-				  <a href="p1image.png"><i class="fas fa-images"></i></a>
-
+			      <a href="https://github.com/fahadhub/project-COVID/p1image.png"><i class="fas fa-images"></i></a>
 
                           </div>
 
