--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                               </p>
                               <a href="https://github.com/fahadhub/project-COVID/"><i class="fab fa-github fa-lg"></i></a>
 			      <a href="https://github.com/fahadhub/project-COVID/p1image.png"><i class="fas fa-images"></i></a>
-			      <a href="https://github.com/fahadhub/project-COVID/p1report.png"><i class="fas fa-file-pdf"></i></a>
+			      <a href="https://fahadhub.github.io/p1Report.pdf"><i class="fas fa-file-pdf"></i></a>
 
                           </div>
 
